fix(PageBuilder): Isola il componente in un iframe per risolvere i conflitti CSS

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-frame-component": "^5.2.7",
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
     "tinymce": "^7.9.1"
