--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@grapesjs/studio-sdk": "^1.0.56",
+    "@grapesjs/studio-sdk-plugins": "^1.0.28",
     "@supabase/supabase-js": "^2.52.0",
     "@tinymce/tinymce-react": "^6.2.1",
     "@zxing/library": "^0.21.3",
