--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^4.19.2",
-    "grapesjs": "^0.22.9",
+    "grapesjs": "^0.22.12",
     "grapesjs-blocks-basic": "^1.0.2",
     "grapesjs-component-countdown": "^1.0.2",
     "grapesjs-custom-code": "^1.0.2",
@@ -31,6 +31,7 @@
     "grapesjs-plugin-forms": "^2.0.6",
     "grapesjs-preset-newsletter": "^1.0.2",
     "grapesjs-preset-webpage": "^1.0.3",
+    "grapesjs-style-bg": "^2.0.2",
     "grapesjs-tabs": "^1.0.6",
     "grapesjs-touch": "^0.1.1",
     "grapesjs-tui-image-editor": "^1.0.2",
